# MicroSCOPE

./: CMakeLists.txt  README.md
config/: bdtevalconfig.cfg  bdttrainconfig.cfg  plotconfig.cfg  preselection.cfg  slimmer.cfg
include/Framework/: Module.hxx  ModuleManager.hxx
include/Modules/: BDTEvalModule.hxx  BDTTrainModule.hxx  PreselectionModule.hxx  SlimmerModule.hxx  justPlotModule.hxx
include/Utils/: Plotter.hxx
run/: CMakeLists.txt  run_all.cxx  run_bdteval.cxx  run_bdttrain.cxx  run_plotter.cxx  run_preselection.cxx  run_slimmer.cxx
src/: CMakeLists.txt
src/Framework/: Module.cxx  ModuleManager.cxx
src/Modules/: BDTEvalModule.cxx  BDTTrainModule.cxx  PreselectionModule.cxx  SlimmerModule.cxx  justPlotModule.cxx
src/Utils/: Plotter.cxx
